--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,15 +8,17 @@
   align-items: center;
 
   .canvas-container {
-    width: 800px;
-    height: 600px;
-    border: thin solid black;
-
+    display: flex;
+    width: 100%;
+    flex: 1;
     margin: 0px;
 
-    > * {
+    > game-canvas {
       width: 100%;
-      height: 100%;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
     }
   }
 
